--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,33 +1,39 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
-
+configurations {
+    productiveDebugApi
+    productiveReleaseApi
+}
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.project.emarketapplication"
-        minSdk 30
-        targetSdk 32
+        minSdk 21
+        targetSdk 31
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    archivesBaseName = 'wareHouse'
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    flavorDimensions 'firestore'
+    productFlavors {
+        productive {
+
+        }
     }
 }
 
@@ -40,4 +46,40 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:30.0.2')
+    // Add the dependency for the Firebase SDK for Google Analytics
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-libraries
+
+    // Declare the dependencies for any other desired Firebase products
+    // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
+    // Google Sign In SDK
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
+    // Firebase UI Library
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
+    implementation 'com.firebaseui:firebase-ui-database:7.2.0'
+
+    //Declare the depedencies for the firebase analytics and crashlytics
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
+    //  implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.11'
+    //  implementation 'com.google.firebase:firebase-crashlytics-gradle:2.9.0'
+
+    //view pager
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
